Fix flickering issue

--- a/css/playground.css
+++ b/css/playground.css
@@ -222,30 +222,32 @@ input{
 /* Aroura */
 
 .body-auroura{
-background: linear-gradient(243deg, #3f1d8b, #222222, #021785, #3ffd5f);
-background-size: 800% 800%;
+  color:white;
+  background-position: 0px 0px;
+ background: linear-gradient(243deg, #3ffd5f, #160f1f, #3f1d8b);
+background-size: 200% 200%;
 
--webkit-animation: AnimationName 20s ease infinite;
--moz-animation: AnimationName 20s ease infinite;
-animation: AnimationName 20s ease infinite;
-color:white;
+-webkit-animation: AnimationName 5s ease infinite;
+-moz-animation: AnimationName 5s ease infinite;
+animation: AnimationName 5s ease infinite;
 }
 
 @-webkit-keyframes AnimationName {
     0%{background-position:0% 72%}
-    50%{background-position:100% 29%}
+    50%{background-position:80% 29%}
     100%{background-position:0% 72%}
 }
 @-moz-keyframes AnimationName {
     0%{background-position:0% 72%}
-    50%{background-position:100% 29%}
+    50%{background-position:80% 29%}
     100%{background-position:0% 72%}
 }
 @keyframes AnimationName { 
     0%{background-position:0% 72%}
-    50%{background-position:100% 29%}
+    50%{background-position:80% 29%}
     100%{background-position:0% 72%}
 }
+
 
 @keyframes shadows-cells {
   25% {
